<resources>
    <string name="app_name">Covid Informer</string>
    <string name="log_in">Log In</string>
    <string name="Input_your_password">Input your Password</string>
    <string name="Input_your_email">Input your email</string>
    <string name="blank_space" />
    <string name="input_your_email">Input_your_email</string>
    <string name="create_an_account_here">Create an account here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
    <string name="password">Password</string>
    <string name="email">Input your Email</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="search_cases">Search Cases</string>
    <string name="input_country_to_view_cases">Input country to view cases...</string>
    <string name="covid_informer">Covid Informer</string>
</resources>