<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignUp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/blank_space"
        android:scaleType="centerCrop"
        android:src="@drawable/mask" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins"
            android:nextFocusDown="@+id/passwordEditText"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="#f44336"
            android:fontFamily="@font/poppins"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextIcons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textSize="20sp"
            android:text="@string/already_have_an_account_log_in_here"
            android:id="@+id/loginTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="40sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>