<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LogIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/blank_space"
        android:scaleType="centerCrop"
        android:src="@drawable/landing" />

    <TextView
        android:id="@+id/loginPageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/covid_informer"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <RelativeLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins"
            android:text="Log in"
            android:textColor="@color/white"
            android:textSize="30sp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints="@gmail.com"
        android:background="@drawable/white_with_border_radius"
        android:fontFamily="@font/poppins"
        android:hint="@string/input_your_email"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="15dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_with_border_radius"
        android:hint="@string/Input_your_password"
        android:minHeight="48dp"
        android:padding="15dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints=" "
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/log_in" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins"
            android:paddingTop="10dp"
            android:text="@string/create_an_account_here"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/pre_loder_pop_up"
        android:layout_centerHorizontal="true"
        android:id="@+id/constrain"
        android:visibility="gone"
        android:layout_centerVertical="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progressbar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>